Updated weather to use Geolocation

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -144,12 +144,12 @@
       <p class="lead">So you ended up here either by choice or by luck. In either case, welcome! Here you can learn
         all about me, like a weird museum of sorts. The more I say, the less I like it. Let's move on shall we?</p>
       <p class="lead">
-        <a asp-area="" asp-page="/AboutMe" class="btn btn-lg btn-secondary fw-bold">sure thing, lets go</a>
+        <a asp-area="" asp-page="/AboutMe" class="btn btn-lg btn-secondary fw-bold text-white">sure thing, lets go</a>
       </p>
     </main>
 
     <footer class="mt-auto">
-      <p>2021 - MyWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a> Last updated 2021/05/07</p>
+      <p>2021 - MyWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a> Last updated 2022/10/06</p>
     </footer>
   </div>
 
