--- a/Pages/What'sNew.cshtml
+++ b/Pages/What'sNew.cshtml
@@ -15,6 +15,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
     <div class="row">
+
         <div class="col-md-4 col-xl-3">
             <div class="GitHubCard bg-c-blue order-card">
                 <div class="card-block">
@@ -22,7 +23,7 @@
                     <div class="InvertSvgColour">
                         <img src="~/images/icons/GitHubHistory.svg" width="40" length="40" style="float: right">
                     </div>
-                    <h2 class="text-right"><span>62</span></h2>
+                    <h2 class="text-right"><span>68</span></h2>
                 </div>
             </div>
         </div>
@@ -66,14 +67,38 @@
 </div>
 
 
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
+<!--
+    After this is the actual commits
+-->
+
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
+    <a href="https://github.com/Aluulu/MyWebsite/commit/47fe849cc15d8e0f7f656ec35335b3c94ceb18da">
+        <h2 class="commits">Commit 47fe849cc15d8e0f7f656ec35335b3c94ceb18da</h2>
+    </a>
+</div>
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
+    <h3 class="License">06/10/2022</h3>
+</div>
+<h4>Create weather.cshtml</h4>
+<p>
+    -Created <code>weather.cshtml</code><br />
+    -Changed the .Net version from Version 5.0 to Version 6.0<br />
+    -Added a legal disclamer regarding taking down the government.<br />
+    -Changed index title from default bootstrap to a personalised one.<br />
+    -Changed issues from the What'sNew page to zero to reflect current status.<br />
+</p>
+<br />
+
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/28173560b3533d50e414b7a3a8a4cc04047a2bbb">
         <h2 class="commits">Commit 28173560b3533d50e414b7a3a8a4cc04047a2bbb</h2>
     </a>
 </div>
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
     <h3 class="License">04/05/2021</h3>
 </div>
 <h4>Adjusted from Dark Mode to Light Mode.</h4>
@@ -85,34 +110,34 @@
 </p>
 <br />
 
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/bc2414c31aa2d38c21b77155f616619de529e2d5">
         <h2 class="commits">Commit bc2414c31aa2d38c21b77155f616619de529e2d5</h2>
     </a>
 </div>
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
     <h3 class="License">30/04/2021</h3>
 </div>
 <h4>Create Test.cshtml</h4>
 <p>
-    -Created Test.cshtml<br />
+    -Created <code>Test.cshtml</code><br />
     -Added responsive slideshow gallery.<br />
     -Added Office365.svg<br />
-    -Added Test.cshtml to navbar<br />
+    -Added <code>Test.cshtml</code> to navbar<br />
 </p>
 <br />
 
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/a318d1be8b2b59e0220ac2df98f2ebfd823c1117">
         <h2 class="commits">Commit a318d1be8b2b59e0220ac2df98f2ebfd823c1117</h2>
     </a>
 </div>
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px;">
-    <h3 class="License" style="float: right;">30/04/2021</h3>
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
+    <h3 class="License">30/04/2021</h3>
 </div>
 <h4>Displaying correct title in Documents.cshtml</h4>
 <p>
@@ -120,15 +145,15 @@
 </p>
 <br />
 
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/d49cf321f39f62b6f947274d74d8e746b6ed8192">
         <h2 class="commits">Commit d49cf321f39f62b6f947274d74d8e746b6ed8192</h2>
     </a>
 </div>
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px;">
-    <h3 class="License" style="float: right;">27/04/2021</h3>
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
+    <h3 class="License">27/04/2021</h3>
 </div>
 <h4>Update AboutMe.cshtml</h4>
 <p>
@@ -136,15 +161,15 @@
 </p>
 <br />
 
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/a41047ad0c0ee8bfb4db161f47452682ec7c9830">
         <h2 class="commits">Commit a41047ad0c0ee8bfb4db161f47452682ec7c9830</h2>
     </a>
 </div>
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px;">
-    <h3 class="License" style="float: right;">27/04/2021</h3>
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
+    <h3 class="License">27/04/2021</h3>
 </div>
 <h4>Updated Documents.cshtml</h4>
 <p>
@@ -158,15 +183,15 @@
 </p>
 <br />
 
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
+<div class="flexBox" style="display: flex;">
+    <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px; margin-right: 10px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/c4c60028a5f3b7095d395538e0ad7d909939914b">
         <h2 class="commits">Commit c4c60028a5f3b7095d395538e0ad7d909939914b</h2>
     </a>
 </div>
-<div class="flexBox">
-    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px;">
-    <h3 class="License" style="float: right;">26/04/2021</h3>
+<div class="flexBox" style="display: flex">
+    <img class="iconsSpace" src="~/images/icons/Calendar.svg" alt="YouTube icon" style="width:24px; height:24px; margin-right: 10px;" >
+    <h3 class="License">26/04/2021</h3>
 </div>
 <h4>AboutMe.cshtml improvements</h4>
 <p>
